--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,10 @@ Flask-SQLAlchemy==2.3.2
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
-jwt==0.5.4
 MarkupSafe==1.1.0
 pkg-resources==0.0.0
 pycparser==2.19
+PyJWT==1.7.1
 six==1.12.0
 SQLAlchemy==1.2.15
 Werkzeug==0.14.1
