--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asn1crypto==0.24.0
+autopep8==1.4.3
 cffi==1.11.5
 Click==7.0
 cryptography==2.4.2
@@ -9,6 +10,8 @@ idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
+pkg-resources==0.0.0
+pycodestyle==2.4.0
 pycparser==2.19
 PyJWT==1.7.1
 six==1.12.0
